# ossium19

./: .gitignore  Cargo.toml  README.md  rebuild-au.sh
.github/workflows/: deploy.yml
crates/ossian19-core/: Cargo.toml
crates/ossian19-core/src/: envelope.rs  filter.rs  fm.rs  lfo.rs  lib.rs  oscillator.rs  synth.rs  voice.rs
crates/ossian19-ffi/: Cargo.toml  cbindgen.toml
crates/ossian19-ffi/include/: ossian19.h
crates/ossian19-ffi/src/: lib.rs
crates/ossian19-fm/: Cargo.toml
crates/ossian19-fm/src/: editor.rs  lib.rs
crates/ossian19-sub/: Cargo.toml
crates/ossian19-sub/src/: editor.rs  lib.rs
crates/ossian19-wasm/: Cargo.toml
crates/ossian19-wasm/src/: lib.rs
docs/: AU-PLUGINS.md  SYNTH_GUIDE.md
juce-plugins/: CMakeLists.txt
juce-plugins/ossian19-fm-au/Source/: AlgorithmDisplay.cpp  AlgorithmDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
juce-plugins/ossian19-sub-au/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
web/: DEVPLAN.md  DX7_EXTRACTION_SUMMARY.md  PRESET_LOCATIONS.txt  extract-dx7-presets.js  extracted-dx7-presets.json  generate-dx7-presets.js  index.html  package-lock.json  package.json  run_server.sh  search-all-presets.js  todo.md  vite.config.ts
web/public/: synth-worklet.js
web/src/: App.tsx  index.css  theme.ts  version.ts
web/src/audio/: arpeggiator.ts  drum-synth.ts  dx7-6op-converter.ts  dx7-6op-presets.ts  dx7-converter.ts  dx7-factory-presets.ts  dx7-syx-parser.example.ts  dx7-syx-parser.ts  effects.ts  engine.ts  fm4op-engine.ts  fm4op-presets.ts  fm4op-types.ts  fm6op-engine.ts  midi-parser.ts  midi-player.ts  presets.ts  songs.ts  space-reverb.ts
web/src/components/: ArpeggiatorPanel.tsx  AudioMeter.tsx  DrumMachine.tsx  Dx7AlgorithmDisplay.tsx  EnvelopeViz.tsx  FilmStripKnob.tsx  Fm4OpPanel.tsx  Fm6OpPanel.tsx  GlobalVisualizer.tsx  InteractiveEnvelope.tsx  Keyboard.tsx  Knob.tsx  LcdScreen.tsx  MidiSelector.tsx  MixerPanel.tsx  ModWheel3D.tsx  Oscilloscope.tsx  PedalboardPanel.tsx  PitchModWheels.tsx  PresetSelector.tsx  SettingsPanel.tsx  SignalRouting.tsx  SongPlayer.tsx  SpaceFxPanel.tsx  StereoMeter.tsx  SynthPanel.tsx  VisualizationPanel.tsx  WoodPanel.tsx
web/src/contexts/: UISettingsContext.tsx
web/src/stores/: arp-store.ts  drum-store.ts  fm4op-store.ts  fm6op-store.ts  fx-store.ts  midi-store.ts  session-store.ts  settings-store.ts  space-fx-store.ts  synth-store.ts
