[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ossian-19 Team"]

[workspace.dependencies]
# DSP
dasp = "0.11"
fundsp = "0.18"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "console",
] }

# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
